tests/compiler/errors/12-module-not-found.jsa
// jastat-summary: Error on importing non-existent module
// jastat: mode=compiler, capture=stderr

import nonexistent from "./nonexistent.jsa";  // Module not found

nonexistent.some_function();
